<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SplashFragment">

    <ImageView
        android:id="@+id/splashBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_bg_content_description"
        android:scaleX="1.3"
        android:src="@drawable/splash_background" />

    <ImageView
        android:id="@+id/splashIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash_icon_content_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:src="@drawable/splash_icon" />

    <TextView
        android:id="@+id/splashTitle"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/splashIcon"
        android:text="@string/splash_title"
        android:textAppearance="@style/splash_title_style"
        />

</RelativeLayout>